8155874: Fix java.desktop deprecation warnings about Class.newInstance
Reviewed-by: serb, alexsch